# horse-pj

./: README.md  docker-compose.yaml
envs/tmpl/: scraping.env
scraping/: Dockerfile  README.md  pyproject.toml
scraping/requirements/: apt.txt
scraping/src/: Horse_data_colect.py
