[tool.poetry]
name = "horse-pj"
version = "0.1.0"
description = ""
authors = ["wataru"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
